--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -148,8 +148,8 @@
 
 /* embla css */
 .embla {
-  max-width: 48rem;
   margin: auto;
+  width: 100%;
   --slide-height: 19rem;
   --slide-spacing: 1rem;
   --slide-size: 100%;
