--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 @plugin "tailwindcss-animate";
-
+@plugin "@tailwindcss/typography";
 @custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
 
 @theme {
@@ -147,6 +147,9 @@ html {
 @layer utilities {
   .wrapper {
     @apply mx-auto max-w-[1200px] px-4 md:px-8 lg:px-16;
+  }
+  .content p {
+    @apply !text-white;
   }
 }
 
